Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Hào hứng xem voi Buôn Đôn dự tiệc buffet",
+    "content": "Vào ngày 12 tháng 3 năm 2025, Hội Voi Buôn Đôn tại Đắk Lắk đã diễn ra với hoạt động chính là tiệc buffet trái cây dành cho voi, thu hút hàng ngàn du khách. Sự kiện này tập trung vào việc bảo tồn voi và tạo ra một mô hình du lịch bền vững, thay vì các hoạt động cưỡi voi trước đây. Du khách được tham gia cho voi ăn và chụp ảnh kỷ niệm, trong không khí vui tươi với các chú voi được trang điểm rực rỡ.",
+    "link": "https://tuoitre.vn/hao-hung-xem-voi-buon-don-du-tiec-buffet-20250312151912329.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Hội Voi Buôn Đôn 2025 có hoạt động gì nổi bật?",
+    "answers": [
+      {
+        "text": "Tiệc buffet trái cây cho voi",
+        "correct": true
+      },
+      {
+        "text": "Cuộc đua voi",
+        "correct": false
+      },
+      {
+        "text": "Cưỡi voi qua sông",
+        "correct": false
+      },
+      {
+        "text": "Thi đấu bóng đá với voi",
+        "correct": false
+      },
+      {
+        "text": "Buổi lễ cúng sức khỏe cho voi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Công an TP.HCM ‘thần tốc’ phá án bắt cóc, giết người, ma túy",
     "content": "Công an TP.HCM đã có những chiến công xuất sắc trong việc đấu tranh phòng chống tội phạm, đặc biệt là trong các vụ án bắt cóc, giết người và ma túy. Trong tháng 3 năm 2025, lực lượng cảnh sát đã triệt phá một băng nhóm bắt cóc người, giải cứu nạn nhân chỉ sau 12 giờ truy xét, và nhanh chóng bắt giữ nghi phạm trong vụ giết người chỉ sau 7 giờ. Đồng thời, Công an cũng đã triệt phá thành công hai đường dây ma túy lớn, bắt giữ 58 nghi can và thu giữ hơn 60 kg ma túy. Thành ủy và UBND TP.HCM đã ghi nhận và khen thưởng các chiến công này.",
     "link": "https://tuoitre.vn/cong-an-tp-hcm-than-toc-pha-an-bat-coc-giet-nguoi-ma-tuy-20250312143058555.htm",
@@ -524,6 +555,37 @@
       },
       {
         "text": "Vì bị điều tra hình sự.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Diva Hồng Nhung đã xạ trị lần 3, không giấu con chuyện bị ung thư",
+    "content": "Diva Hồng Nhung đã trải qua đợt xạ trị thứ 3 sau khi phát hiện mắc ung thư vú vào cuối năm 2024. Cô quyết định không giấu kín chuyện bệnh tật với hai con và nhận được sự ủng hộ từ người thân và bạn bè trong quá trình điều trị. Hồng Nhung cho biết hành trình chống chọi với bệnh tật đã giúp cô có cái nhìn sâu sắc hơn về giá trị của sự sống và mong muốn truyền cảm hứng cho các phụ nữ khác đang chiến đấu với căn bệnh này.",
+    "link": "https://dantri.com.vn/giai-tri/diva-hong-nhung-da-xa-tri-lan-3-khong-giau-con-chuyen-bi-ung-thu-20250312140055100.htm",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Diva Hồng Nhung đang trải qua điều trị gì?",
+    "answers": [
+      {
+        "text": "Xạ trị ung thư vú",
+        "correct": true
+      },
+      {
+        "text": "Phẫu thuật tim",
+        "correct": false
+      },
+      {
+        "text": "Thẩm mỹ",
+        "correct": false
+      },
+      {
+        "text": "Điều trị viêm phổi",
+        "correct": false
+      },
+      {
+        "text": "Khám sức khỏe định kỳ",
         "correct": false
       }
     ]
@@ -1263,6 +1325,33 @@
     ]
   },
   {
+    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
+    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
+    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
+    "answers": [
+      {
+        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
+        "correct": false
+      },
+      {
+        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
+        "correct": false
+      },
+      {
+        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
     "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
     "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
@@ -1312,33 +1401,6 @@
       },
       {
         "text": "Protein, selen, vitamin B9",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
-    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
-    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
-    "answers": [
-      {
-        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
-        "correct": false
-      },
-      {
-        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
-        "correct": false
-      },
-      {
-        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
         "correct": false
       }
     ]
@@ -2225,32 +2287,28 @@
     ]
   },
   {
-    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
-    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
-    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
+    "title": "Béo phì, bệnh chồng bệnh",
+    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
+    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
     "answers": [
       {
-        "text": "Bệnh sởi",
+        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
         "correct": true
       },
       {
-        "text": "Ngộ độc thực phẩm",
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
         "correct": false
       },
       {
-        "text": "Nhiễm trùng đường tiêu hóa",
+        "text": "Chỉ làm tăng cân mà không gây bệnh.",
         "correct": false
       },
       {
-        "text": "Viêm phổi",
-        "correct": false
-      },
-      {
-        "text": "Sốt xuất huyết",
+        "text": "Chỉ làm đau lưng mà thôi.",
         "correct": false
       }
     ]
@@ -2283,28 +2341,32 @@
     ]
   },
   {
-    "title": "Béo phì, bệnh chồng bệnh",
-    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
-    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
+    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
+    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
+    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
     "answers": [
       {
-        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
+        "text": "Bệnh sởi",
         "correct": true
       },
       {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "text": "Ngộ độc thực phẩm",
         "correct": false
       },
       {
-        "text": "Chỉ làm tăng cân mà không gây bệnh.",
+        "text": "Nhiễm trùng đường tiêu hóa",
         "correct": false
       },
       {
-        "text": "Chỉ làm đau lưng mà thôi.",
+        "text": "Viêm phổi",
+        "correct": false
+      },
+      {
+        "text": "Sốt xuất huyết",
         "correct": false
       }
     ]
@@ -4381,33 +4443,6 @@
     ]
   },
   {
-    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
-    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
-    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
-    "answers": [
-      {
-        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì không có đủ cầu thủ giỏi.",
-        "correct": false
-      },
-      {
-        "text": "Vì không đủ may mắn trong các trận đấu.",
-        "correct": false
-      },
-      {
-        "text": "Vì không chú trọng vào phòng ngự.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ai dễ bị ngưng thở khi ngủ?",
     "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
     "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
@@ -4434,6 +4469,33 @@
       },
       {
         "text": "Người có bệnh tim mạch",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
+    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
+    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
+    "answers": [
+      {
+        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có đủ cầu thủ giỏi.",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ may mắn trong các trận đấu.",
+        "correct": false
+      },
+      {
+        "text": "Vì không chú trọng vào phòng ngự.",
         "correct": false
       }
     ]
@@ -5006,68 +5068,6 @@
       },
       {
         "text": "Hệ thống treo nâng cấp",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Honda trao hơn 1.500 giải trong cuộc thi \"An toàn giao thông cho nụ cười ngày mai\"",
-    "content": "Honda Việt Nam đã phối hợp với Bộ GD&ĐT và Ủy ban ATGT Quốc gia tổ chức lễ trao giải cuộc thi \"An toàn giao thông cho nụ cười ngày mai\" dành cho học sinh và giáo viên cấp THCS, THPT năm học 2024-2025. Cuộc thi nhằm nâng cao kiến thức và kỹ năng tham gia giao thông an toàn cho học sinh và giáo viên, với hơn 1.500 giải thưởng được trao cho các bài thi xuất sắc. Buổi lễ trao giải diễn ra vào ngày 7/3/2025, có sự tham gia của các đại diện chính phủ và giáo dục, nhấn mạnh tầm quan trọng của giáo dục an toàn giao thông trong trường học.",
-    "link": "https://dantri.com.vn/giao-duc/honda-trao-hon-1500-giai-trong-cuoc-thi-an-toan-giao-thong-cho-nu-cuoi-ngay-mai-20250311153041566.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Cuộc thi \"An toàn giao thông cho nụ cười ngày mai\" được tổ chức bởi ai?",
-    "answers": [
-      {
-        "text": "Honda Việt Nam phối hợp với Bộ GD&ĐT và Ủy ban ATGT Quốc gia",
-        "correct": true
-      },
-      {
-        "text": "Chính phủ Việt Nam",
-        "correct": false
-      },
-      {
-        "text": "Bộ Công an",
-        "correct": false
-      },
-      {
-        "text": "Các trường đại học",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức quốc tế về giao thông",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ba phương pháp trẻ hóa da không cần phẫu thuật",
-    "content": "Bài viết giới thiệu ba phương pháp trẻ hóa da không cần phẫu thuật gồm sóng HIFU, SUPERB và laser 4D. Các công nghệ này giúp cải thiện độ săn chắc và đàn hồi của da bằng cách kích thích sản sinh collagen mà không để lại sẹo hay tổn thương. Thời gian điều trị nhanh chóng, chỉ từ 30 đến 60 phút và bệnh nhân có thể trở lại hoạt động bình thường ngay sau đó. Tuy nhiên, hiệu quả không phải là vĩnh viễn và cần được duy trì định kỳ.",
-    "link": "https://vnexpress.net/ba-phuong-phap-tre-hoa-da-khong-can-phau-thuat-4859870.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Ba phương pháp nào được sử dụng để trẻ hóa da không cần phẫu thuật?",
-    "answers": [
-      {
-        "text": "Sóng HIFU, SUPERB, laser 4D",
-        "correct": true
-      },
-      {
-        "text": "Phẫu thuật căng da",
-        "correct": false
-      },
-      {
-        "text": "Tiêm botox",
-        "correct": false
-      },
-      {
-        "text": "Sử dụng kem dưỡng da",
-        "correct": false
-      },
-      {
-        "text": "Chăm sóc da tại nhà",
         "correct": false
       }
     ]
