Update generated content

--- a/home.html
+++ b/home.html
@@ -179,6 +179,37 @@
     ]
   },
   {
+    "title": "Bùi Thạc Chuyên dựng lại địa đạo Củ Chi, kể chuyện làm phim \"chưa từng có\"",
+    "content": "Đạo diễn Bùi Thạc Chuyên đang thực hiện bộ phim \"Địa đạo: Mặt trời trong bóng tối\" với bối cảnh lịch sử tại địa đạo Củ Chi, nơi từng là căn cứ chiến đấu của quân dân trong thời kỳ chiến tranh Việt Nam. Quá trình sản xuất gặp nhiều khó khăn, đặc biệt là việc dựng phim trường mô phỏng địa đạo trong lòng đất, với những thách thức về ánh sáng và không gian hạn chế. Ê-kíp đã phải nỗ lực rất nhiều để tái hiện chính xác không gian và cảm xúc của một giai đoạn lịch sử bi hùng. Bộ phim dự kiến ra mắt vào ngày 4/4.",
+    "link": "https://dantri.com.vn/giai-tri/bui-thac-chuyen-dung-lai-dia-dao-cu-chi-ke-chuyen-lam-phim-chua-tung-co-20250312123822825.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bộ phim \"Địa đạo: Mặt trời trong bóng tối\" của Bùi Thạc Chuyên kể về điều gì?",
+    "answers": [
+      {
+        "text": "Cuộc sống và chiến đấu của quân dân tại địa đạo Củ Chi.",
+        "correct": true
+      },
+      {
+        "text": "Một cuộc phiêu lưu trong không gian vũ trụ.",
+        "correct": false
+      },
+      {
+        "text": "Một chuyện tình lãng mạn giữa hai nhân vật chính.",
+        "correct": false
+      },
+      {
+        "text": "Những thách thức trong việc xây dựng một bộ phim hài.",
+        "correct": false
+      },
+      {
+        "text": "Cuộc sống hằng ngày của người dân thành phố hiện đại.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Giai đoạn 2020 - 2025, quy mô kinh tế Bình Định đạt 5,3 tỉ USD",
     "content": "Giai đoạn 2020 - 2025, quy mô kinh tế tỉnh Bình Định dự kiến đạt 5,3 tỉ USD, với tốc độ tăng trưởng GRDP ước đạt 7 - 7,2% mỗi năm. Tỉnh đề ra mục tiêu thu ngân sách đạt 30.000 tỉ đồng vào năm 2030 và tổng kim ngạch xuất khẩu đạt 8,182 tỉ USD trong giai đoạn 2021 - 2025. Những nỗ lực này phản ánh sự chuyển mình tích cực của tỉnh trong phát triển kinh tế xã hội, khẳng định vị thế là động lực kinh tế của vùng duyên hải Trung Bộ.",
     "link": "https://tuoitre.vn/giai-doan-2020-2025-quy-mo-kinh-te-binh-dinh-dat-5-3-ti-usd-20250312153803767.htm",
@@ -1211,33 +1242,6 @@
     ]
   },
   {
-    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
-    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
-    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
-    "answers": [
-      {
-        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
-        "correct": false
-      },
-      {
-        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
-        "correct": false
-      },
-      {
-        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
     "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
     "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
@@ -1260,6 +1264,33 @@
       },
       {
         "text": "Protein, selen, vitamin B9",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
+    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
+    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
+    "answers": [
+      {
+        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
+        "correct": false
+      },
+      {
+        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
+        "correct": false
+      },
+      {
+        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
         "correct": false
       }
     ]
@@ -1404,33 +1435,6 @@
     ]
   },
   {
-    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
-    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
-    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
-    "answers": [
-      {
-        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
-        "correct": false
-      },
-      {
-        "text": "Không có tác dụng gì trong điều trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tưởng ung thư phổi hóa rối loạn lo âu",
     "content": "Ông Đường, 62 tuổi, đã trải qua triệu chứng khó thở và hụt hơi, ban đầu nghĩ rằng mình mắc ung thư phổi, nhưng bác sĩ đã chẩn đoán ông bị rối loạn lo âu. Sau khi thực hiện các xét nghiệm và chụp CT phổi, kết quả cho thấy sức khỏe phổi của ông bình thường. Ông được điều trị bằng thuốc và tư vấn tâm lý, sau 4 ngày điều trị, triệu chứng của ông đã cải thiện đáng kể và xuất viện để điều trị ngoại trú. Rối loạn lo âu có thể gây ra nhiều triệu chứng thể chất và tâm lý, đòi hỏi sự chú ý và điều trị đúng cách để tránh các biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/tuong-ung-thu-phoi-hoa-roi-loan-lo-au-4860303.html",
@@ -1457,6 +1461,33 @@
       },
       {
         "text": "Đau bụng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thuốc kháng viêm - 'vũ khí' trị bệnh tai mũi họng",
+    "content": "Thuốc kháng viêm đóng vai trò quan trọng trong điều trị các bệnh lý tai mũi họng, giúp giảm phù nề, giảm đau, và thúc đẩy quá trình lành thương. Việc sử dụng đúng loại thuốc và đúng chỉ định là rất cần thiết để tránh tác dụng phụ không mong muốn như suy giảm miễn dịch hay loãng xương. Các loại thuốc kháng viêm bao gồm thuốc chứa Steroid, thuốc không Steroid và thuốc kháng viêm dạng men, mỗi loại có cơ chế và tác dụng riêng. Để đạt hiệu quả cao trong điều trị, bác sĩ cần cân nhắc kỹ lưỡng khi kê đơn thuốc cho bệnh nhân.",
+    "link": "https://vnexpress.net/thuoc-khang-viem-vu-khi-tri-benh-tai-mui-hong-4860259.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Thuốc kháng viêm có vai trò gì trong điều trị bệnh tai mũi họng?",
+    "answers": [
+      {
+        "text": "Giúp giảm phù nề, giảm đau và thúc đẩy quá trình lành thương.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có tác dụng giảm đau mà không giúp hồi phục.",
+        "correct": false
+      },
+      {
+        "text": "Không có tác dụng gì trong điều trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ sử dụng cho bệnh nhân viêm mũi dị ứng.",
         "correct": false
       }
     ]
@@ -2146,33 +2177,6 @@
     ]
   },
   {
-    "title": "Biến chứng nguy hiểm của viêm gan E",
-    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
-    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
-    "answers": [
-      {
-        "text": "Suy gan cấp và biến chứng thần kinh",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây triệu chứng nhẹ",
-        "correct": false
-      },
-      {
-        "text": "Không có biến chứng gì",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến gan mà thôi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Béo phì, bệnh chồng bệnh",
     "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
     "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
@@ -2226,6 +2230,33 @@
       },
       {
         "text": "Sốt xuất huyết",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Biến chứng nguy hiểm của viêm gan E",
+    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
+    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
+    "answers": [
+      {
+        "text": "Suy gan cấp và biến chứng thần kinh",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây triệu chứng nhẹ",
+        "correct": false
+      },
+      {
+        "text": "Không có biến chứng gì",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến gan mà thôi",
         "correct": false
       }
     ]
