Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Nhiều công trình giao thông trọng điểm sẽ hoàn thành dịp 30/4",
+    "content": "Nhiều công trình giao thông trọng điểm tại Việt Nam dự kiến sẽ hoàn thành vào dịp 30/4, bao gồm nhà ga T3 sân bay Tân Sơn Nhất và 5 dự án thành phần cao tốc Bắc Nam. Nhà ga T3, với tổng đầu tư 11.000 tỷ đồng, sẽ trở thành nhà ga phục vụ khách nội địa lớn nhất cả nước. Cao tốc Bến Lức - Long Thành cũng sẽ thông xe thêm hai đoạn, góp phần nâng cao hiệu quả giao thông trong khu vực. Các nhà đầu tư cam kết hoàn thành các dự án đúng tiến độ, góp phần hiện đại hóa hệ thống giao thông quốc gia.",
+    "link": "https://vnexpress.net/nhieu-cong-trinh-giao-thong-trong-diem-se-hoan-thanh-dip-30-4-4860231.html",
+    "cat": "thoi-su",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những công trình giao thông nào sẽ hoàn thành vào dịp 30/4?",
+    "answers": [
+      {
+        "text": "Nhà ga T3 sân bay Tân Sơn Nhất và cao tốc Bến Lức - Long Thành",
+        "correct": true
+      },
+      {
+        "text": "Cầu Vĩnh Tuy và đường cao tốc Hà Nội - Hải Phòng",
+        "correct": false
+      },
+      {
+        "text": "Nhà ga Nội Bài và cao tốc Đà Nẵng - Quảng Ngãi",
+        "correct": false
+      },
+      {
+        "text": "Cao tốc Bắc Nam và đường sắt cao tốc Bắc - Nam",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lộ diện hòn đảo duy nhất của Việt Nam vào top 10 hòn đảo đẹp nhất châu Á",
     "content": "Phú Quốc là hòn đảo duy nhất của Việt Nam được tạp chí du lịch DestinAsian công nhận nằm trong top 10 hòn đảo đẹp nhất châu Á. Hòn đảo này xếp thứ 5 trong danh sách, chỉ sau các địa điểm nổi tiếng như Bali và Maldives. Phú Quốc nổi bật với bãi biển cát trắng, nước biển trong xanh và hệ sinh thái phong phú, thu hút đông đảo du khách quốc tế. Việc vinh danh này khẳng định vị thế ngày càng cao của Phú Quốc trên bản đồ du lịch thế giới.",
     "link": "https://tuoitre.vn/lo-dien-hon-dao-duy-nhat-cua-viet-nam-vao-top-10-hon-dao-dep-nhat-chau-a-20250312155843049.htm",
@@ -1175,33 +1202,6 @@
     ]
   },
   {
-    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
-    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
-    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
-    "answers": [
-      {
-        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
-        "correct": true
-      },
-      {
-        "text": "Canxi, vitamin A, vitamin E",
-        "correct": false
-      },
-      {
-        "text": "Chất xơ, omega-3, vitamin K",
-        "correct": false
-      },
-      {
-        "text": "Protein, selen, vitamin B9",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
     "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
     "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
@@ -1224,6 +1224,33 @@
       },
       {
         "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
+    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
+    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
+    "answers": [
+      {
+        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
+        "correct": true
+      },
+      {
+        "text": "Canxi, vitamin A, vitamin E",
+        "correct": false
+      },
+      {
+        "text": "Chất xơ, omega-3, vitamin K",
+        "correct": false
+      },
+      {
+        "text": "Protein, selen, vitamin B9",
         "correct": false
       }
     ]
@@ -2110,6 +2137,33 @@
     ]
   },
   {
+    "title": "Biến chứng nguy hiểm của viêm gan E",
+    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
+    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
+    "answers": [
+      {
+        "text": "Suy gan cấp và biến chứng thần kinh",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây triệu chứng nhẹ",
+        "correct": false
+      },
+      {
+        "text": "Không có biến chứng gì",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến gan mà thôi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Béo phì, bệnh chồng bệnh",
     "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
     "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
@@ -2163,33 +2217,6 @@
       },
       {
         "text": "Sốt xuất huyết",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Biến chứng nguy hiểm của viêm gan E",
-    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
-    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
-    "answers": [
-      {
-        "text": "Suy gan cấp và biến chứng thần kinh",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây triệu chứng nhẹ",
-        "correct": false
-      },
-      {
-        "text": "Không có biến chứng gì",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến gan mà thôi",
         "correct": false
       }
     ]
@@ -4547,33 +4574,6 @@
       },
       {
         "text": "Giữ tâm lý tích cực",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Phú Yên diễu hành motobike, Bình Định mở tour du lịch tàu hỏa",
-    "content": "Phú Yên và Bình Định vừa tổ chức hai sự kiện nhằm thúc đẩy du lịch. Tại Phú Yên, sự kiện diễu hành xe mô tô lần đầu tiên sẽ diễn ra từ ngày 21 đến 22-3, thu hút hàng trăm tay lái trong và ngoài nước. Trong khi đó, Bình Định sẽ mở các chuyến tàu charter miễn phí cho du khách từ TP.HCM, Hà Nội và Đà Nẵng, nhằm khuyến khích du lịch trong khu vực.",
-    "link": "https://tuoitre.vn/phu-yen-dieu-hanh-motobike-binh-dinh-mo-tour-du-lich-tau-hoa-20250311155946835.htm",
-    "cat": "du-lich",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Hai sự kiện du lịch nào vừa được tổ chức tại Phú Yên và Bình Định?",
-    "answers": [
-      {
-        "text": "Diễu hành xe mô tô và tour tàu hỏa miễn phí",
-        "correct": true
-      },
-      {
-        "text": "Lễ hội văn hóa và hội thảo du lịch",
-        "correct": false
-      },
-      {
-        "text": "Triển lãm nghệ thuật và hội chợ ẩm thực",
-        "correct": false
-      },
-      {
-        "text": "Cuộc thi thể thao và chương trình ca nhạc",
         "correct": false
       }
     ]
